# stb_image_resize

./: README.md  dune-project  stb_image_resize.opam
lib/: dune  stb_image_resize.ml  stb_image_resize.mli
raw/: c.ml  dune  function_description.ml  stb_image_resize.c  stb_image_resize__c_cout_generated_functions__Function_description__Function.c  stb_image_resize__c_generated_functions__Function_description__Function.ml  stb_image_resize__c_generated_types.ml  stb_image_resize_raw.ml  type_description.ml  types_generated.ml
test/: dune  test_resize.ml
